--- a/Sikayet/Web.config
+++ b/Sikayet/Web.config
@@ -20,18 +20,14 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-
     <authentication mode="Forms">
-      <forms loginUrl="~/Home/GirisYap">
-      </forms>
+      <forms loginUrl="~/Home/GirisYap"></forms>
     </authentication>
-
     <roleManager defaultProvider="MyProvider" enabled="true">
       <providers>
         <add name="MyProvider" connectionStringName="SikayetContext" applicationName="/" type="Sikayet.App_Classes.Rol, Sikayet, Version=1.0.0.0, Culture=neutral" />
       </providers>
     </roleManager>
-    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
